test/files/neg/t7385.check
t7385.scala:2: error: '(' expected but identifier found.
  do { println("bippy") } while i<10
                                ^
t7385.scala:6: error: '(' expected but identifier found.
  while i<10 { () }
        ^
t7385.scala:7: error: illegal start of simple expression
}
^
three errors found
